<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <!-- ImageView para el fondo -->
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fondo_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/icon_start_session"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/logo_cinego"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/txt_name_app"
        style="@style/theme_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cine_go"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/icon_start_session"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txt_log_in"
        style="@style/theme_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_start_session"
        app:layout_constraintTop_toBottomOf="@id/txt_name_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_user_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_blue"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:hintTextColor="@color/light_blue"
        app:layout_constraintTop_toBottomOf="@id/txt_log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input_user"
            style="@style/theme_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_insert_user"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/light_blue"
        app:hintTextColor="@color/light_blue"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_input_user_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_input_password"
            style="@style/theme_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_insert_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/light_blue"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_access"
        style="@style/theme_buttom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:backgroundTint="@color/violet"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_input_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/link_account_create"
        style="@style/theme_normal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_register"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_access"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txt_info1"
        style="@style/theme_normal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/txt_access"
        app:layout_constraintTop_toBottomOf="@id/link_account_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/txt_info1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/imgfinger"
            style="@style/theme_login_icons"
            app:srcCompat="@drawable/fingerprint"
            app:tint="@color/white"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/txtFinger"
            style="@style/theme_normal_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Huella"
            android:visibility="visible"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
